--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
 # image source here: https://github.com/devcontainers/images/tree/main/src/miniconda
 FROM mcr.microsoft.com/devcontainers/miniconda
 
+USER root
 # Optional to install a different version of Python
 # RUN conda install -y python=3.6 \
 #     && pip install --no-cache-dir pipx \
@@ -13,7 +14,7 @@ FROM mcr.microsoft.com/devcontainers/miniconda
 
 # Copy environment.yml (if found) to a temp location so we update the environment. Also
 # copy "noop.txt" so the COPY instruction does not fail if no environment.yml exists.
-COPY environment.yml* .devcontainer/noop.txt /tmp/conda-tmp/
+COPY .devcontainer/environment.yml .devcontainer/noop.txt /tmp/conda-tmp/
 RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bin/conda env update -n base -f /tmp/conda-tmp/environment.yml; fi \
     && rm -rf /tmp/conda-tmp
 
