--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,17 @@
 	},
 	// Configure tool-specific properties.
 	"customizations": {
+		// Access to other codespaces in the same org or personal account
+		"codespaces": {
+			"repositories": {
+				"broander/dotfiles": {
+					"permissions": "write-all"
+				},
+				"broander/standard-dev-container": {
+					"permissions": "write-all"
+				},
+			}
+		},
 		// Configure properties specific to VS Code.
 		"vscode": {
 			// Set *default* container specific settings.json values on container create.
